--- a/JavaScript/Unit 1/index.html
+++ b/JavaScript/Unit 1/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MocK interview Question</title>
+    <style>
+      body {
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        background: linear-gradient(to top left, #28b487, #7dd56f);
+      }
+      h1 {
+        font-family: sans-serif;
+        font-size: 50px;
+        line-height: 1.3;
+        width: 100%;
+        padding: 30px;
+        text-align: center;
+        color: white;
+      }
+    </style>
   </head>
   <body>
-    <h1>javaScript Module Interview</h1>
+    <h1>Javascript Interview</h1>
     <!-- type="text/javascript" is the default value, so it's optional in modern HTML5. You can safely omit it unless you're using a different script type (like module). -->
-    <script src="./script.js" type="text/javascript" defer></script>
+    <script src="./JavaScript/script.js" type="text/javascript" defer></script>
   </body>
 </html>
